fix wrap

--- a/style.css
+++ b/style.css
@@ -12,11 +12,24 @@ html, body, main {
     /*                  0 0 20px; /* Outer glow */
 }
 
-p {
+ /* Removes any default margin and padding */
+p, h1, h2, h3, h4, h5, h6 {
     margin: 0;
     padding: 0;
 }
 
+ /* removes arrow from summaries */
+summary {
+    display: inline-flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+details {
+    display: inline-block; /* Makes it take only the space it needs */
+    max-height: 0px; /* Adjust as necessary */
+}   
+  
 /* Container for aligning items in row */
 .new-alarm-container {
     display: flex;
@@ -31,11 +44,23 @@ p {
     font-weight: 400;
     cursor: pointer;
     color: white;
-    margin-left: 100px;
-    margin-top: 80px;
+    margin-left: 350px;
+    margin-top: 100px;
     font-family: 'Inter', sans-serif;
+    transition: transform 0.3s ease;
+    
+}
+.new-alarm-container:hover{
+    transform: scale(1.1);
 }
 
+/* + text alignment for alarm new alarm button */
+.alarmplus { 
+    transition: transform 0.3s ease;
+    color: white; 
+    margin-top: 109px; 
+    margin-left: 10px;
+}
 /* Side panel image styles */
 .side-panel-img {
     font-size: 16px;
@@ -45,6 +70,10 @@ p {
     margin: 10px 10px;
     transition: opacity 0.5s; /* Smooth transition for opacity */
     position: absolute;
+}
+
+.side-panel-img:hover {
+    transform: scale(1.1);
 }
 
 /* Side panel default styles */
@@ -131,12 +160,35 @@ p {
     border: 1px solid #F00;
     background: #5D0000;
     box-shadow: 4px 4px 4px 0px rgba(205, 0, 0, 0.75);
-    width: 400px;
-    height: 500px;
-    margin-left: 210px;
+    width: 500px;
+    height: 600px;
+    margin-left: 170px;
     margin-top: 50px;
     color: white;
     display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+}
+
+/* Custom scrollbar styles for WebKit browsers */
+.building-container::-webkit-scrollbar {
+    width: 0px; /* Adjust the width of the scrollbar */
+}
+
+.building-container::-webkit-scrollbar-track {
+    background: #3b3b3b; /* Background of the scrollbar track */
+    border-radius: 10px; /* Rounded corners */
+    height: 10px;
+}
+
+.building-container::-webkit-scrollbar-thumb {
+    background: #F00; /* Color of the scrollbar thumb */
+    border-radius: 10px; /* Rounded corners */
+    height: 40px;
+}
+
+.building-container::-webkit-scrollbar-thumb:hover {
+    background: #a10000; /* Color when hovering over the thumb */
 }
 
 .building-name {
@@ -166,17 +218,144 @@ p {
     color: white;
     font-family: 'Inter', sans-serif;
 }
+
 .edit-button {
     width: 20px;    
     height: 20px;
-    position: absolute;
-    margin-left: 40px;
-    margin-top: 8px;
     border-radius: 25%;
-    padding: 5px;
+    margin-top: 40px;
+    margin-right: 10px;
+    margin-left: 5px;
 }
 
 .edit-button:hover {
     cursor: pointer;
-    background: #460000;
 }
+
+.floors {
+    border-bottom:  3px solid #8D8D8D;;
+    margin-top: 40px;
+    border-radius: 1px;
+}
+
+.floor-name {
+    color: white;
+    text-align: center;
+    width: 100%;
+    font-weight: 100; /* Correct font-weight value */
+    font-size: 17px; /* Match the font size */
+    font-family: 'Inter', sans-serif;
+}
+
+.floor-division {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 35px;
+}
+
+.floor-name-input {
+    background: none;
+    border: none;
+    color: white;
+    outline: none;
+    text-align: center;
+    font-family: 'Inter', sans-serif;
+    width: 100%; 
+    font-weight: 100; /* Correct font-weight value */
+    font-size: 16px; /* Match the font size */
+}
+
+.add-alarm-container {
+    color: white;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    width: 61px;
+    height: 10px;
+    border-radius: 5px;
+    border: 4px solid #F00;
+    background: #A70000;
+    box-shadow: 3px 2px 4px 0px #CD0000;
+    font-weight: 400;
+    cursor: pointer;
+    color: white;
+    font-family: 'Inter', sans-serif;
+    font-size: 10px;
+    margin-top: 80px;
+    margin-left: 60px;
+}
+
+.alarm-container {
+    border-radius: 25px;
+    border: 1px solid #F00;
+    background: #5D0000;
+    box-shadow: 3px 2px 4px 0px rgba(205, 0, 0, 0.50);
+    width: 200px;
+    height: 200px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    text-align: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.alarm-status-container {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.alarm-status-off {
+    width: 10px;                
+    height: 10px;               
+    border-radius: 50%;         
+    background-color: red;
+    margin-left: 10px;
+}
+
+.alarm-configuration {
+    text-align: center;
+
+}
+
+.alarm-configuration, input {
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    text-align: center;
+}
+
+.alarm-configuration input[type="number"]::-webkit-inner-spin-button,
+.alarm-configuration input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none; /* Hide the spin buttons */
+    margin: 0; /* Reset margin */
+}
+
+.alarm-location {
+    background: none;
+    border: none;
+    outline: none;
+    color: white;
+}
+
+.alarm-location::placeholder {
+    color: white;
+}
+
+#refreshButton {
+    background-color: black;
+}
+
+.refresh-button {
+    width: 10px;
+    height: 10px;
+}
+
+
